--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="primaryBlue">#405ADD</color>
     <color name="secondaryBlue">#273a9a</color>
     <color name="primaryYellow">#859A27</color>
+    <color name="primaryRed">#ff385d</color>
 </resources>
