--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,7 +9,8 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/secondaryBlack">
 
         <TextView
             android:id="@+id/textView4"
@@ -18,7 +19,7 @@
             android:layout_marginTop="48dp"
             android:letterSpacing="0.05"
             android:text="Perfil"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="48dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +36,7 @@
             android:layout_marginTop="32dp"
             android:text="Usuário :"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -47,7 +48,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="148dp"
             android:text="teste@teste.com"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintStart_toEndOf="@+id/textUser"
             app:layout_constraintTop_toTopOf="parent" />
@@ -67,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="Alterar senha"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="88dp"
             android:text="Sair"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
