--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -35,7 +35,7 @@
             app:layout_constraintTop_toTopOf="@+id/view3" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/btn_create"
             android:layout_width="wrap_content"
             android:layout_height="75dp"
             android:layout_marginStart="8dp"
@@ -76,9 +76,9 @@
             android:text="Finalizadas: "
             android:textColor="@color/white"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView7"
-            app:layout_constraintHorizontal_bias="0.722"
-            app:layout_constraintStart_toEndOf="@+id/inp_task"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.903"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/inp_task" />
 
         <TextView
@@ -87,10 +87,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="0"
-
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="@+id/textView6" />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
